@@ -9,6 +9,7 @@
 	<onload condition="Skin.HasSetting(HolidayEffects) + System.Date(1-7,11-23)">Skin.Reset(HolidayEffects)</onload>
 	<onload condition="!Skin.HasSetting(DisableScriptPlayList) + !System.HasAddon(script.randomandlastitems)">Skin.Setbool(DisableScriptPlayList)</onload>
 	<onload condition="System.HasAddon(script.artistslideshow) + !Skin.HasSetting(DisableSlideShowArt) + IsEmpty(Window.Property(ArtistSlideshowRunning))">RunScript(script.artistslideshow, daemon=True)</onload>
+	<onload condition="!Skin.HasSetting(DisableVideoExtras) + !System.HasAddon(script.videoextras)">Skin.Setbool(DisableScriptPlayList)</onload>
 	<onload condition="System.HasAddon(script.favourites)">$VAR[RunFavouriteCmd]</onload>
 	<!--
 	<onload condition="!Skin.HasSetting(DisableScriptPlayList) + Library.HasContent(Movies)">XBMC.RunScript(script.randomandlastitems,type=Movie,limit=10,method=Random,playlist=special://skin/extras/Playlists/UnwatchedMovies.xsp,menu=UnWatched)</onload>
