@@ -2,7 +2,7 @@
 <window>
 	<defaultcontrol always="true">50</defaultcontrol>
 	<allowoverlay>no</allowoverlay>
-	<views>50,51,500,501,508,515,503,504,505,555,560</views>
+	<views>50,51,500,501,508,515,503,504,505,555,560,732</views>
 	<onload condition="!Skin.HasSetting(DisableTvTunes) + System.HasAddon(script.tvtunes)">XBMC.RunScript(script.tvtunes,backend=True)</onload>
 	<controls>
 		<include>CommonBackground</include>
@@ -29,6 +29,8 @@
 			<!-- view id = 515 -->
 			<include>Coverflowview</include>
 			<!-- view id = 555 -->
+			<include>FullWallView</include>
+			<!-- view id = 732 -->
 			<include>LiveTVView1</include>
 			<!-- view id = 560 -->
 		</control>
