@@ -1,0 +1,133 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<includes>
+	<include name="FullWallView">
+		<control type="group">
+			<visible>Control.IsVisible(732)</visible>
+			<control type="image">
+				<include>Dimensions_Fullscreen</include>
+				<texture background="true">black-back.png</texture>
+			</control>
+			<control type="panel" id="732">
+				<left>70</left>
+				<top>85</top>
+				<width>1189</width>
+				<height>570</height>
+				<onleft>2</onleft>
+				<onright>800</onright>
+				<onup>732</onup>
+				<ondown>732</ondown>
+				<viewtype label="31648">panel</viewtype>
+				<pagecontrol>-</pagecontrol>
+				<scrolltime>200</scrolltime>
+				<preloaditems>200</preloaditems>
+				<visible>Container.Content(Movies) | Container.Content(TVShows) | Container.Content(Sets) | Container.Content(MusicVideos)</visible>
+				<itemlayout height="190" width="131">
+					<control type="image">
+						<left>0</left>
+						<top>0</top>
+						<width>131</width>
+						<height>190</height>
+						<bordersize>5</bordersize>
+						<bordertexture border="5">button-nofocus.png</bordertexture>
+						<aspectratio scalediffuse="false">scale</aspectratio>
+						<include>VisibleFadeEffect</include>
+						<texture background="true">$VAR[PosterThumb]</texture>
+					</control>
+					<control type="group">
+						<visible>!IsEmpty(ListItem.Overlay)</visible>
+						<control type="image">
+							<left>46</left>
+							<top>5</top>
+							<width>80</width>
+							<height>80</height>
+							<fadetime>IconCrossfadeTime</fadetime>
+							<texture background="true" fallback="StatusBanner/DefaultWatched.png">StatusBanner/$LOCALIZE[16102].png</texture>
+							<visible>StringCompare(ListItem.Overlay,OverlayWatched.png) + !ListItem.IsResumable</visible>
+						</control>
+						<control type="image">
+							<left>46</left>
+							<top>5</top>
+							<width>80</width>
+							<height>80</height>
+							<fadetime>IconCrossfadeTime</fadetime>
+							<texture background="true" fallback="StatusBanner/DefaultUnwatched.png">StatusBanner/$LOCALIZE[16101].png</texture>
+							<visible>!StringCompare(ListItem.Overlay,OverlayWatched.png) + !ListItem.IsResumable</visible>
+						</control>
+						<control type="image">
+							<left>46</left>
+							<top>5</top>
+							<width>80</width>
+							<height>80</height>
+							<fadetime>IconCrossfadeTime</fadetime>
+							<texture background="true" fallback="StatusBanner/DefaultInProgress.png">StatusBanner/$LOCALIZE[31344].png</texture>
+							<visible>ListItem.IsResumable</visible>
+						</control>
+					</control>
+					<control type="image">
+						<left>0</left>
+						<top>0</top>
+						<width>131</width>
+						<height>190</height>
+						<bordersize>5</bordersize>
+						<bordertexture border="5">button-nofocus.png</bordertexture>
+						<aspectratio>stretch</aspectratio>
+						<texture>black-back.png</texture>
+						<!--colordiffuse>AAFFFFFF</colordiffuse-->
+						<visible>!StringCompare(ListItem.Label,..)</visible>
+					</control>
+				</itemlayout>
+				<focusedlayout height="190" width="131">
+					<control type="group">
+						<left>0</left>
+						<top>0</top>
+						<animation effect="slide" end="0,27" time="200" reversible="true" condition="Container.Row(0)">conditional</animation>
+						<animation effect="slide" end="0,-37" time="200" reversible="true" condition="Container.Row(2)">conditional</animation>
+						<animation reversible="false" effect="zoom" end="-27,-33,185,267" time="100">focus</animation>
+						<animation reversible="false" effect="zoom" start="-27,-33,185,267" time="100">unfocus</animation>
+						<control type="image">
+							<left>0</left>
+							<top>0</top>
+							<width>131</width>
+							<height>190</height>
+							<aspectratio scalediffuse="false">scale</aspectratio>
+							<include>VisibleFadeEffect</include>
+							<bordersize>7</bordersize>
+							<texture background="true">$VAR[PosterThumb]</texture>
+							<bordertexture border="8">ThumbBorder.png</bordertexture>
+						</control>
+						<control type="group">
+							<visible>!IsEmpty(ListItem.Overlay)</visible>
+							<control type="image">
+								<left>44</left>
+								<top>6</top>
+								<width>80</width>
+								<height>80</height>
+								<fadetime>IconCrossfadeTime</fadetime>
+								<texture background="true" fallback="StatusBanner/DefaultWatched.png">StatusBanner/$LOCALIZE[16102].png</texture>
+								<visible>StringCompare(ListItem.Overlay,OverlayWatched.png) + !ListItem.IsResumable</visible>
+							</control>
+							<control type="image">
+								<left>44</left>
+								<top>6</top>
+								<width>80</width>
+								<height>80</height>
+								<fadetime>IconCrossfadeTime</fadetime>
+								<texture background="true" fallback="StatusBanner/DefaultUnwatched.png">StatusBanner/$LOCALIZE[16101].png</texture>
+								<visible>!StringCompare(ListItem.Overlay,OverlayWatched.png) + !ListItem.IsResumable</visible>
+							</control>
+							<control type="image">
+								<left>44</left>
+								<top>6</top>
+								<width>80</width>
+								<height>80</height>
+								<fadetime>IconCrossfadeTime</fadetime>
+								<texture background="true" fallback="StatusBanner/DefaultInProgress.png">StatusBanner/$LOCALIZE[31344].png</texture>
+								<visible>ListItem.IsResumable</visible>
+							</control>
+						</control>
+					</control>
+				</focusedlayout>
+			</control>
+		</control>
+	</include>
+</includes>
