@@ -22,6 +22,7 @@
 	<include file="ViewsFullWidthList.xml" />
 	<include file="ViewsWideIcon.xml" />
 	<include file="ViewsCoverFlow.xml" />
+	<include file="ViewsFullWall.xml" />
 	<include file="ViewsThumbnailList.xml" />
 	<include file="ViewsFileMode.xml" />
 	<include file="ViewsMusicLibrary.xml" />
