@@ -1,0 +1,214 @@
+<?xml version="1.0" encoding="utf-8"?>
+<window id="3001">
+	<!-- The following property allows TvTunes to keep playing when this window is displayed -->
+	<onload condition="!IsEmpty(ListItem.TvShowTitle)">SetProperty("TvTunesSupported", "TvShows")</onload>
+	<onload condition="IsEmpty(ListItem.TvShowTitle)">SetProperty("TvTunesSupported", "Movies")</onload>
+	<onload condition="!Skin.HasSetting(DisableTvTunes)">XBMC.RunScript(script.tvtunes,backend=True)</onload>
+	<defaultcontrol always="true">51</defaultcontrol>
+	<allowoverlay>yes</allowoverlay>
+	<controls>
+			<control type="button" id="800">
+			<include>InvisibleButton</include>
+			<onleft>801</onleft>
+			<onright>804</onright>
+			<onup>51</onup>
+			<ondown>51</ondown>
+			<visible>false</visible>
+		</control>
+		<include>CommonBackground</include>
+		<include>MediaViewBackgrounds</include>
+		<control type="label">
+			<left>55</left>
+			<top>5</top>
+			<width>1170</width>
+			<height>30</height>
+			<font>font30_title</font>
+			<textcolor>red</textcolor>
+			<scroll>true</scroll>
+			<align>center</align>
+			<aligny>center</aligny>
+			<include>Window_OpenClose_Animation</include>
+			<label>[UPPERCASE]$INFO[ListItem.Title][/UPPERCASE]</label>
+		</control>
+		<control type="label">
+			<left>10</left>
+			<top>45</top>
+			<width>1260</width>
+			<height>20</height>
+			<font>font12_title</font>
+			<textcolor>grey2</textcolor>
+			<wrapmultiline>true</wrapmultiline>
+			<scroll>false</scroll>
+			<align>center</align>
+			<aligny>center</aligny>
+			<include>Window_OpenClose_Animation</include>
+			<label>$ADDON[script.videoextras 32001]</label>
+		</control>
+
+		
+		<control type="group">
+			<include>Window_OpenClose_Animation</include>		
+		</control>
+		<include>CommonPageCount</include>
+		<include>FloorReturnButtons</include>
+		<include>CommonNowPlaying</include>
+		<include>BehindDialogFadeOut</include>
+		<control type="group">
+			<include>VisibleFadeEffect</include>
+			<control type="list" id="51">
+				<left>95</left>
+				<top>88</top>
+				<width>1080</width>
+				<height>521</height>
+				<onleft>60</onleft>
+				<onright>60</onright>
+				<onup>51</onup>
+				<ondown>51</ondown>
+				<viewtype label="537">list</viewtype>
+				<pagecontrol>60</pagecontrol>
+				<scrolltime>200</scrolltime>
+				<itemlayout height="40" width="1080">
+					<control type="image">
+						<left>0</left>
+						<top>0</top>
+						<width>1080</width>
+						<height>41</height>
+						<texture border="0,2,0,2">MenuItemNF.png</texture>
+					</control>
+					<control type="image">
+						<left>10</left>
+						<top>4</top>
+						<width>40</width>
+						<height>32</height>
+						<texture background="true">$INFO[ListItem.Icon]</texture>
+					</control>
+					<control type="label">
+						<left>60</left>
+						<top>0</top>
+						<width>950</width>
+						<height>40</height>
+						<font>font13</font>
+						<textcolor>grey2</textcolor>
+						<selectedcolor>selected</selectedcolor>
+						<align>left</align>
+						<aligny>center</aligny>
+						<label>$INFO[ListItem.Label]</label>
+					</control>
+					<control type="image">
+							<left>1050</left>
+							<top>8</top>
+							<width>24</width>
+							<height>24</height>
+							<texture diffuse="poster-diffuse.png">MediaStatus/OverlayBase.png</texture>
+							<visible>ListItem.IsResumable</visible>
+						</control>
+						<control type="image">
+							<left>1050</left>
+							<top>8</top>
+							<width>24</width>
+							<height>24</height>
+							<texture diffuse="poster-diffuse.png">$VAR[PartlyWatched,MediaStatus/,.png]</texture>
+							<visible>ListItem.IsResumable</visible>
+						</control>
+						<control type="image">
+							<left>1050</left>
+							<top>8</top>
+							<width>24</width>
+							<height>24</height>
+							<texture>$INFO[ListItem.Overlay,MediaStatus/]</texture>
+							<visible>IntegerGreaterThan(ListItem.PlayCount,0)</visible>
+						</control>
+					
+					
+					
+					
+				</itemlayout>
+				<focusedlayout height="40" width="1080">
+					<control type="image">
+						<left>0</left>
+						<top>0</top>
+						<width>1080</width>
+						<height>41</height>
+						<texture border="0,2,0,2">MenuItemNF.png</texture>
+						<visible>!Control.HasFocus(51)</visible>
+						<include>VisibleFadeEffect</include>
+					</control>
+					<control type="image">
+						<left>0</left>
+						<top>0</top>
+						<width>1080</width>
+						<height>41</height>
+						<texture border="0,2,0,2">MenuItemFO.png</texture>
+						<visible>Control.HasFocus(51)</visible>
+						<include>VisibleFadeEffect</include>
+					</control>
+					<control type="image">
+						<left>10</left>
+						<top>4</top>
+						<width>40</width>
+						<height>32</height>
+						<texture background="true">$INFO[ListItem.Icon]</texture>
+					</control>
+					<control type="label">
+						<left>60</left>
+						<top>0</top>
+						<width>950</width>
+						<height>40</height>
+						<font>font13</font>
+						<textcolor>white</textcolor>
+						<selectedcolor>selected</selectedcolor>
+						<align>left</align>
+						<aligny>center</aligny>
+						<label>$INFO[ListItem.Label]</label>
+					</control>
+					
+						<control type="image">
+							<left>1050</left>
+							<top>8</top>
+							<width>24</width>
+							<height>24</height>
+							<texture diffuse="poster-diffuse.png">MediaStatus/OverlayBase.png</texture>
+							<visible>ListItem.IsResumable</visible>
+						</control>
+						<control type="image">
+							<left>1050</left>
+							<top>8</top>
+							<width>24</width>
+							<height>24</height>
+							<texture diffuse="poster-diffuse.png">$VAR[PartlyWatched,MediaStatus/,.png]</texture>
+							<visible>ListItem.IsResumable</visible>
+						</control>
+						<control type="image">
+							<left>1050</left>
+							<top>8</top>
+							<width>24</width>
+							<height>24</height>
+							<texture>$INFO[ListItem.Overlay,MediaStatus/]</texture>
+							<visible>IntegerGreaterThan(ListItem.PlayCount,0)</visible>
+						</control>
+					
+					
+					
+				</focusedlayout>
+			</control>
+			<control type="scrollbar" id="60">
+				<left>1170</left>
+				<top>80</top>
+				<width>25</width>
+				<height>550</height>
+				<texturesliderbackground border="0,14,0,14">ScrollBarV.png</texturesliderbackground>
+				<texturesliderbar border="0,14,0,14">ScrollBarV_bar.png</texturesliderbar>
+				<texturesliderbarfocus border="0,14,0,14">ScrollBarV_bar_focus.png</texturesliderbarfocus>
+				<textureslidernib>ScrollBarNib.png</textureslidernib>
+				<textureslidernibfocus>ScrollBarNib.png</textureslidernibfocus>
+				<onleft>51</onleft>
+				<onright>800</onright>
+				<showonepage>false</showonepage>
+				<orientation>vertical</orientation>
+				<visible>Control.IsVisible(51)</visible>
+			</control>
+		</control>
+
+		<include>BottomClock</include>
+	</controls>
+</window>
